--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "rollup-plugin-node-resolve": "^4.0.0"
   },
   "dependencies": {
-    "world-countries": "^2.1.0",
-    "if-emoji": "^0.1.0"
+    "core-js": "^3.1.4",
+    "if-emoji": "^0.1.0",
+    "world-countries": "^2.1.0"
   }
 }
