--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "countryflag",
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
   "version": "2.3.2",
-  "main": "index.js",
+  "main": "dist.js",
   "license": "MIT",
   "scripts": {
     "postinstall": "./scripts/getCountries.js",
