--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "countryflag",
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
   "version": "2.3.3",
-  "main": "dist.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.umd.js",
   "license": "MIT",
   "scripts": {
     "postinstall": "./scripts/getCountries.js",
