--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "rollup --config rollup.config.js --watch"
   },
   "devDependencies": {
+    "@satellitestudio/eslint-config": "^1.2.1",
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0"
