--- a/package.json
+++ b/package.json
@@ -2,25 +2,31 @@
   "name": "countryflag",
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
   "version": "2.5.3",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "browser": "dist/index.umd.js",
+  "main": "dist/index.js",
+  "typings": "dist/types.d.ts",
   "license": "MIT",
   "scripts": {
     "get-countries": "./scripts/getCountries.js",
     "postinstall": "yarn get-countries",
-    "build": "rollup --config rollup.config.js",
-    "prepublish": "yarn get-countries && yarn build",
+    "clean": "rimraf dist/*",
+    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
+    "prepublish": "yarn get-countries && yarn clean && yarn build",
     "dev": "rollup --config rollup.config.js --watch"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-typescript": "^4.1.1",
     "@satellitestudio/eslint-config": "1.2.1",
-    "rollup": "1.1.2",
-    "rollup-plugin-commonjs": "9.2.0",
-    "rollup-plugin-node-resolve": "4.0.0"
+    "rimraf": "^3.0.2",
+    "rollup": "2.10.4",
+    "rollup-plugin-terser": "^5.3.0",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.2"
   },
   "dependencies": {
     "core-js": "3.1.4",
+    "cross-env": "^7.0.2",
     "if-emoji": "0.1.0",
     "world-countries": "4.0.0"
   }
