--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
   "version": "3.0.0",
   "main": "dist/index.js",
-  "typings": "dist/types.d.ts",
+  "typings": "dist/types/index.d.ts",
   "license": "MIT",
   "scripts": {
     "get-countries": "./scripts/getCountries.js",
