--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "dist/types/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "get-countries": "./scripts/getCountries.js",
+    "get-countries": "ts-node -P ./scripts/tsconfig.tsnode.json ./scripts/getCountries.ts",
     "postinstall": "yarn get-countries",
     "clean": "rimraf dist/*",
     "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
@@ -21,6 +21,7 @@
     "rimraf": "^3.0.2",
     "rollup": "2.10.4",
     "rollup-plugin-terser": "^5.3.0",
+    "ts-node": "^8.10.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.2"
   },
