--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate-countries": "ts-node -P ./scripts/tsconfig.tsnode.json ./scripts/getCountries.ts",
     "clean": "rimraf dist/*",
     "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
-    "prepublishOnly": "yarn generate-countries && yarn clean && yarn build",
+    "prepare": "yarn generate-countries && yarn clean && yarn build",
     "dev": "rollup --config rollup.config.js --watch"
   },
   "devDependencies": {
