--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "countryflag",
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "main": "dist/index.js",
   "typings": "dist/types/index.d.ts",
   "license": "MIT",
@@ -13,20 +13,21 @@
     "dev": "rollup --config rollup.config.js --watch"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-typescript": "^4.1.1",
-    "@satellitestudio/eslint-config": "1.2.1",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@satellitestudio/eslint-config": "1.2.2",
+    "@types/node": "^16.4.13",
     "rimraf": "^3.0.2",
-    "rollup": "2.10.4",
-    "rollup-plugin-terser": "^5.3.0",
-    "ts-node": "^8.10.2",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.2"
+    "rollup": "2.56.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^10.2.0",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "core-js": "3.1.4",
-    "cross-env": "^7.0.2",
+    "core-js": "3.16.1",
+    "cross-env": "^7.0.3",
     "if-emoji": "0.1.0",
     "world-countries": "4.0.0"
   }
