--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "countryflag",
   "description": "return an emoji flag or possible fallbacks for a given iso2 code",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "main": "dist/index.js",
-  "typings": "dist/types/index.d.ts",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "generate-countries": "ts-node -P ./scripts/tsconfig.tsnode.json ./scripts/getCountries.ts",
