--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "dev": "rollup --config rollup.config.js --watch"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@satellitestudio/eslint-config": "1.2.2",
-    "@types/node": "^16.4.13",
-    "rimraf": "^3.0.2",
-    "rollup": "2.56.2",
+    "@types/node": "^18.13.0",
+    "cross-env": "^7.0.3",
+    "rimraf": "^4.1.2",
+    "rollup": "^2.56.2",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-node": "^10.2.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "core-js": "3.16.1",
-    "cross-env": "^7.0.3",
+    "core-js": "3.27.2",
     "if-emoji": "0.1.0",
     "world-countries": "4.0.0"
   }
