--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "generate-countries": "ts-node -P ./scripts/tsconfig.tsnode.json ./scripts/getCountries.ts",
     "clean": "rimraf dist/*",
-    "build": "cross-env NODE_ENV=production rollup --config rollup.config.js",
+    "build": "cross-env NODE_ENV=production rollup --config rollup.config.mjs",
     "prepare": "yarn generate-countries && yarn clean && yarn build",
-    "dev": "rollup --config rollup.config.js --watch"
+    "dev": "rollup --config rollup.config.mjs --watch"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.1",
@@ -20,7 +20,7 @@
     "@types/node": "^18.13.0",
     "cross-env": "^7.0.3",
     "rimraf": "^4.1.2",
-    "rollup": "^2.56.2",
+    "rollup": "^3.15.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
